se agregan variables de entorno y se muestran
